// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Callout component renders the default variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-blue-100 before:bg-blue-700"
  data-testid="callout-default-test"
>
  Callout
</div>
`;

exports[`Callout component renders the information variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700"
  data-testid="callout-information-test"
>
  Callout
</div>
`;

exports[`Callout component renders the information_magenta variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-magenta-500"
  data-testid="callout-information-magenta-test"
>
  Callout
</div>
`;

exports[`Callout component renders the information-teal variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-gray-800"
  data-testid="callout-information-teal-test"
>
  Callout
</div>
`;

exports[`Callout component renders the negative variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-red-100 before:bg-red-700"
  data-testid="callout-negative-test"
>
  Callout
</div>
`;

exports[`Callout component renders the positive variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-green-100 before:bg-green-700"
  data-testid="callout-positive-test"
>
  Callout
</div>
`;

exports[`Callout component renders the warning variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-yellow-150 before:bg-amber-500"
  data-testid="callout-warning-test"
>
  Callout
</div>
`;

exports[`Callout component renders the white variant correctly 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-white before:bg-teal-700"
  data-testid="callout-white-test"
>
  Callout
</div>
`;

exports[`Callout component renders with no variant prop 1`] = `
<div
  class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-blue-100 before:bg-blue-700"
  data-testid="callout-default-test"
>
  Default Callout
</div>
`;
